# obs-evs-pcie-win-io

./: .clang-format  .gitignore  CMakeLists.txt  Dependencies.cmake.in  README.md  buildspec.json  vcpkg-configuration.json  vcpkg.json
data/: obs-evs-pcie-win-io-config.json
doc/: howto_obs.txt
src/: AudioVideoHelper.cpp  AudioVideoHelper.h  BoardResourceManager.cpp  BoardResourceManager.h  PluginUtil.cpp  PluginUtil.h  Shader.cpp  Shader.h  SimplePlayer.cpp  SimplePlayer.h  SimpleRecorder.cpp  SimpleRecorder.h  VideoHelper.cpp  VideoHelper.h  audio_sequencer.cpp  audio_sequencer.h  plugin-main.cpp  plugin-main.org.cpp
